--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ h1{
   color: red;
   font-size: 100px;
   margin-top: 1px;
+  margin-bottom: 1px;
 }
 h2{
   font-family: 'Permanent Marker', cursive;
@@ -21,10 +22,10 @@ h2{
   weight: 50px;
   font-size: 50px;
   text-align: center;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: none;
   display: block;
-
+  margin-top: none;
 
 
 }
