--- a/src/style.css
+++ b/src/style.css
@@ -23,10 +23,9 @@ h2{
   weight: 50px;
   font-size: 50px;
   text-align: center;
-  margin-right: auto;
-  margin-left: none;
   display: block;
   margin-top: none;
+  margin-left: 500px;
   box-shadow: 1px 5px 15px 2px rgb(223, 216, 216);
 
 }
@@ -36,8 +35,9 @@ h2{
   font-size: 70px;
   background: transparent;
   border: 5px solid red;
-  margin-top: 50px;
-  margin-right: 50px;
+  margin-top: 100px;
+  margin-right: 100px;
+  margin-left: 400px;
   color: white;
 }
 
@@ -46,8 +46,9 @@ h2{
   font-size: 70px;
   background: transparent;
   border: 5px solid red;
-  margin-top: 50px;
+  margin-top: 100px;
   margin-right: 50px;
+  margin-left: 20px;
   color: white;
 
 }
