--- a/src/style.css
+++ b/src/style.css
@@ -1,54 +1,58 @@
-body {
-  background: url(https://assets1.ignimgs.com/2019/05/02/detectivepikachumovie-blogroll-1556817397661_1280w.jpg)
 
+body{
+  font-size: 30px;
+  padding: 30px;
 }
+
+#bg-image{
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  background-image: url(https://bit.ly/2WGXEw3);
+  background-size: cover;
+  height: 100%;
+  filter: blur(12px);
+}
+
 h1{
-  font-family: 'Anton', sans-serif;
-  color: red;
+  font-family: 'Gruppo', cursive;
+  text-align: center;
+  color:tomato;
   font-size: 100px;
   margin-top: 1px;
   margin-bottom: 1px;
-}
-h2{
-  font-family: 'Permanent Marker', cursive;
-  color: white;
-  weight: bold;
-  margin-bottom: 1px;
-
-
+  font-weight: bolder;
 }
 
-#input-name{
-  color: red;
-  weight: 50px;
+button{
+  font-family: 'Gruppo', cursive;
   font-size: 50px;
+  font-weight: bold;
+  color: black;
+  margin-left: 800px;
+  margin-top: 200px;
+  background-color: tomato;
+  background: transparent;
+  border-style: solid;
+}
+
+h2{
+  font-family: 'Satisfy', cursive;
+  color: white;
   text-align: center;
-  display: block;
-  margin-top: none;
-  margin-left: 500px;
-  box-shadow: 1px 5px 15px 2px rgb(223, 216, 216);
-
+  margin-bottom: 1px;
+  font-weight: lighter;
 }
 
-#button-cifrar{
-  font-family: 'Permanent Marker', cursive;
-  font-size: 70px;
-  background: transparent;
-  border: 5px solid red;
-  margin-top: 100px;
-  margin-right: 100px;
-  margin-left: 400px;
+p{
+  font-family: 'Satisfy', cursive;
   color: white;
+  text-align: center;
+  font-weight: lighter;
 }
 
-#button-descifrar{
-  font-family: 'Permanent Marker', cursive;
-  font-size: 70px;
-  background: transparent;
-  border: 5px solid red;
-  margin-top: 100px;
-  margin-right: 50px;
-  margin-left: 20px;
-  color: white;
+.appear  {
 
+  display:none;
 }
