Cambié html, agregué ids a botones e inputs; puse estilos en css; cambié js

--- a/src/style.css
+++ b/src/style.css
@@ -56,3 +56,19 @@ p{
 
   display:none;
 }
+
+#button-code{
+  margin-left: 1px;
+}
+
+#input-code{
+  font-size: 30px;
+}
+
+#button-decode{
+  margin-left: 1px;
+}
+
+#input-decode{
+  font-size: 30px;
+}
