Agrego cambios a html con dos secciones; subo por primera vez cipher.js e index.js, logró cifrar, falta descifrar; eliminé estilos

--- a/src/style.css
+++ b/src/style.css
@@ -1,74 +1,3 @@
-
-body{
-  font-size: 30px;
-  padding: 30px;
-}
-
-#bg-image{
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  background-image: url(https://bit.ly/2WGXEw3);
-  background-size: cover;
-  height: 100%;
-  filter: blur(12px);
-}
-
-h1{
-  font-family: 'Gruppo', cursive;
-  text-align: center;
-  color:tomato;
-  font-size: 100px;
-  margin-top: 1px;
-  margin-bottom: 1px;
-  font-weight: bolder;
-}
-
-button{
-  font-family: 'Gruppo', cursive;
-  font-size: 50px;
-  font-weight: bold;
-  color: black;
-  margin-left: 800px;
-  margin-top: 200px;
-  background-color: tomato;
-  background: transparent;
-  border-style: solid;
-}
-
-h2{
-  font-family: 'Satisfy', cursive;
-  color: white;
-  text-align: center;
-  margin-bottom: 1px;
-  font-weight: lighter;
-}
-
-p{
-  font-family: 'Satisfy', cursive;
-  color: white;
-  text-align: center;
-  font-weight: lighter;
-}
-
-.appear  {
-
-  display:none;
-}
-
-#button-code{
-  margin-left: 1px;
-}
-
-#input-code{
-  font-size: 30px;
-}
-
-#button-decode{
-  margin-left: 1px;
-}
-
-#input-decode{
-  font-size: 30px;
+.disappear{
+  display: none;
 }
