Subiendo cambios a html; puse divs para dar diseño a secciones; cambié css: diseño de botones, cajas de mensaje, di estilo a h1, h2; se completó la tarea en el cipher: se logró cifrar y descifrar; tmb se cambió index.js; y creé una carpeta con imágenes para el fondo

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,105 @@
 .disappear{
   display: none;
 }
+
+body{
+  background-image: url("./img/fondook.jpg");
+  /* background-image: url("img/pluma.png");
+  filter: opacity(100px);
+  background-size: auto; */
+
+}
+/*
+.bg-image{
+  background-image: url(http://cort.as/-Jx1f);
+  filter: blur(0.1);
+
+} */
+
+
+.seccion-1-diseno{
+ text-align: center;
+}
+
+.cajas-diseno{
+ text-align: center;
+ margin-top: 100px;
+}
+
+.botones-diseno{
+ text-align: center;
+ margin-top: 80px;
+
+}
+
+.cajas-texto{
+ font-family: 'Gruppo', cursive;
+ color:tomato;
+ font-weight: 900;
+ font-size: 40px;
+ text-align: center;
+ /* opacity: 0.3; */
+ background: transparent;
+
+
+
+}
+
+
+h1{
+ font-family: 'Gruppo', cursive;
+ /* text-align: center; */
+ align-items: center;
+ font-size: 100px;
+ font-weight: bolder;
+ color: tomato;
+ margin-top: 1px;
+ margin-bottom: 1px;
+
+}
+
+h2{
+ font-family: 'Satisfy', cursive;
+ margin-top: 200px;
+ color: white;
+ /* text-align: center; */
+ /* font-size: 40px; */
+
+
+}
+
+p{
+ font-family: 'Satisfy', cursive;
+ /* text-align: center; */
+ font-size: 30px;
+ color: white;
+
+}
+
+#boton-acceso{
+ font-family: 'Gruppo', cursive;
+ font-size: 50px;
+ background: transparent;
+ font-weight: 600;
+
+ /* margin-left: 800px; */
+
+}
+
+.boton-estilo{
+ font-family: 'Gruppo', cursive;
+ font-size: 50px;
+ font-weight: 600;
+ background: transparent;
+
+ /* margin-left: 1500px; */
+
+}
+
+.offset-diseno{
+ text-align: center;
+ margin-left: 550px;
+ margin-top: 20px;
+ /* opacity: 0.3; */
+
+}
